# rna-forest-cover-type-prediction

./: .gitignore  pyproject.toml  requirements.txt
.history/: README_20251013074551.md  README_20251013074830.md  README_20251013075031.md  README_20251013075425.md  README_20251013084437.md  requirements_20251013080258.txt
notebooks/: PP2.2.1 - Conhecendo o Conjunto de Dados.ipynb  PP2.2.2 - Proposição e Avaliação de RNAs.ipynb  PP2.2.3 - Validação_Cruzada_e_Busca_em_Grade.ipynb  PP2_2_3_Validação_Cruzada_e_Busca_em_Grade (1).ipynb  PP2_2_3_Validação_Cruzada_e_Busca_em_Grade_(1).ipynb  PP2_2_3_Validaçao_Cruzada_e_Busca_em_Grade.ipynb
notebooks/content/: cover_mlp_best.pth  cover_scaler.pkl  cover_training_summary.json  grid_search_results.json
