[project]
name = "rna-forest-cover-type-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
